RESOLVED FIXED19435
fix warning in PluginDebug.h
https://bugs.webkit.org/show_bug.cgi?id=19435
Summary fix warning in PluginDebug.h
Darin Adler
Reported 2008-06-08 09:32:16 PDT
Looking at the GTK build I saw a warning I'd like to fix.
Attachments
patch (1.63 KB, patch)
2008-06-08 09:34 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2008-06-08 09:34:02 PDT
mitz
Comment 2 2008-06-08 09:38:38 PDT
Comment on attachment 21574 [details] patch r=me
Darin Adler
Comment 3 2008-06-08 11:08:06 PDT
Committed revision 34442.
Note You need to log in before you can comment on or make changes to this bug.