2008-06-08  Darin Adler  <darin@apple.com>

Reviewed by Mitz.

        - https://bugs.webkit.org/show_bug.cgi?id=19435
          fix warning in PluginDebug.h

        * plugins/PluginDebug.h: Don't compile the errorStrings array if LOG_DISABLED is set.



Canonical link: https://commits.webkit.org/26893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34442 268f45cc-cd09-0410-ab3c-d52691b4dbfc